handle save banner issue